plugins {
    id 'org.springframework.boot' version '2.2.7.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
}

group = 'pl.edu.uj.gbartnicka'
version = '0.0.1'
sourceCompatibility = '14'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

bootRun {
    standardInput = System.in
}

dependencies {
    compile group: 'io.vavr', name: 'vavr', version: '0.10.2'
    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.65'

    implementation 'org.springframework.boot:spring-boot-starter-rsocket'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    compile group: 'org.springframework.shell', name: 'spring-shell-starter', version: '2.0.1.RELEASE'

    compile group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
    compile group: 'joda-time', name: 'joda-time', version: '2.10.6'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
    compile group: 'com.devskiller', name: 'jfairy', version: '0.6.4'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'io.projectreactor:reactor-test'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.16.1'
}

test {
    useJUnitPlatform()
    testLogging {
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}
